# ai-video-chess

./: .gitignore  Cargo.toml  README.md  chess_gui.py  difficulty-switches.md  en-passant-analysis.md  requirements.txt  video_chess.py
crates/eight-bits/: Cargo.toml
crates/eight-bits/src/: lib.rs  mos6502.rs
crates/video-chess-core/: Cargo.toml
crates/video-chess-core/src/: lib.rs
disassembly/: chess-board-bits.md  disassembly-chat.txt  video-chess-annotated.s  video-chess-ntsc.s  video-chess-pal.s  video-chess.s  video_chess_annotated_part1.asm  video_chess_annotated_part2.asm  video_chess_annotated_part3.asm  video_chess_annotated_part4.asm  video_chess_annotated_part5.asm  video_chess_annotated_part6.asm  video_chess_annotated_part7.asm  zero-page-variables.md
